# llm-eval-workbench

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  LIMITATIONS.md  METHODOLOGY.md  PROVIDER_POLICY_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/configs/: regulated_readiness_demo.yaml  safety_smoke.yaml
evals/datasets/: regulated_readiness_demo.jsonl  safety_smoke.jsonl
reports/: example_report.md  model_readiness_leaderboard.md
src/llm_eval_workbench/: __init__.py  cli.py  config.py  dataset.py  evaluation.py  metrics.py  report.py  runner.py  taxonomy.py
src/llm_eval_workbench/adapters/: anthropic_adapter.py  base.py  mock_adapter.py  openai_adapter.py
tests/: test_config.py  test_dataset.py  test_evaluation.py  test_runner.py
