[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-workbench"
version = "0.1.0"
description = "Production-minded LLM evaluation harness for safety, reliability, cost, and latency analysis."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Cody Champion"}
]
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[project.scripts]
llm-eval-workbench = "llm_eval_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

