[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eval-workbench"
version = "0.1.0"
description = "LLM reliability, performance, governance, cost, and latency evaluation for regulated GenAI systems."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Cody Champion"}
]
keywords = [
  "llm-evaluation",
  "model-readiness",
  "ai-governance",
  "regulated-ai",
  "llmops",
]
dependencies = [
  "pyyaml>=6.0",
  "rich>=13.7"
]

[project.urls]
Homepage = "https://codychampion.bitsandbeakers.com/projects/llm-eval-workbench"
Repository = "https://github.com/codychampion/llm-eval-workbench"
Methodology = "https://github.com/codychampion/llm-eval-workbench/blob/main/METHODOLOGY.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[project.scripts]
llm-eval-workbench = "llm_eval_workbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
